# progetto_finale

./: .gitignore  CMakeLists.txt  README.md  main_5_1  release.sh  tests.sh
app/: CMakeLists.txt
app/src/: classify.c  main.c  main_2.c  train.c
lib/classify/: CMakeLists.txt
lib/classify/include/: classify.h
lib/classify/src/: classify.c
lib/classify2/: CMakeLists.txt
lib/classify2/include/: classify2.h
lib/classify2/src/: classify2.c
lib/image_helper/: CMakeLists.txt
lib/image_helper/include/: image_helper.h
lib/image_helper/src/: image_helper.c
lib/mnist/: CMakeLists.txt
lib/mnist/include/: mnist.h
lib/mnist/src/: example.c  mnist.c
lib/train/: CMakeLists.txt
lib/train/include/: train.h
lib/train/src/: train.c
lib/train2/: CMakeLists.txt
lib/train2/include/: train2.h
lib/train2/src/: train2.c
lib/train_2/: CMakeLists.txt
lib/train_2/include/: train_2.h
lib/train_2/src/: train_2.c
test/test_classify/: CMakeLists.txt
test/test_classify/src/: test.c
test/test_image_helper/: CMakeLists.txt
test/test_image_helper/src/: test.c  test_functions.c
test/test_mnist/: CMakeLists.txt
test/test_mnist/src/: test.c  test_functions.c
test/test_train/: CMakeLists.txt
test/test_train/src/: test.c  test_functions.c
